@@ -42,6 +42,7 @@ files.extend(map(lambda n: 'system_scripts/' + n,
              ['Clock Info.txt',
               'animation.txt',
               'audio.txt',
+              'circlesjs.txt',
               'convert.txt',
               'fademessage.txt',
               'layers.txt',
